--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
 body {
     height: 100vh;
     font-family: 'Rubik', san-serif;
-    background: var(--background);
+    background-color: lightblue;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
@@ -17,7 +17,6 @@ header {
     top: 0;
     display: flex;
     align-items: center;
-    background-color: var(--header-background);
 }
 
 main {
@@ -31,5 +30,48 @@ footer {
     font-size: .8em;
     display: flex;
     justify-content: flex-end;
-    background-color: var(--footer-background);
+}
+
+.score-display {
+    width: 100%;
+    padding: 25px;
+    margin: 10px;
+    text-align: center;
+    background-color: lightslategray;
+    border-radius: 15px;
+    box-shadow: 10px 10px 26px 1px rgba(0,0,0,0.64);
+}
+
+.player-stats {
+    height: 200px;
+    width: 300px;
+    padding: 25px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 10px 10px 26px 1px rgba(0,0,0,0.64);
+}
+.player-stats {
+    background-color: lightcoral;
+}
+
+.game-body{
+    display: flex;
+    justify-content: space-around
+}
+
+.goblin {
+    width: 300px;
+    padding: 25px;
+    margin: 10px;
+    text-align: center;
+    border-radius: 15px;
+    box-shadow: 10px 10px 26px 1px rgba(0,0,0,0.64);
+    background-color: green;
+}
+
+.challenge {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
