--- a/styles/global.css
+++ b/styles/global.css
@@ -76,3 +76,9 @@ footer {
     justify-content: center;
     padding: 10px;
 }
+
+.player-avatar {
+    zoom: 500%;
+    position: relative;
+    top: -15px;
+}
